--- a/Vjb.Sp.BackupLibrary/Vjb.Sp.BackupLibrary.csproj
+++ b/Vjb.Sp.BackupLibrary/Vjb.Sp.BackupLibrary.csproj
@@ -100,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileUtilities\FileWriter.cs" />
+    <Compile Include="frmSpLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSpLogin.Designer.cs">
+      <DependentUpon>frmSpLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAboutBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,11 +123,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpClient\SharepointClient.cs" />
+    <Compile Include="Utilities\SpBackupWorker.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
     <EmbeddedResource Include="frmAboutBox.resx">
       <DependentUpon>frmAboutBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSpLogin.resx">
+      <DependentUpon>frmSpLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
